# eidos

./: Dockerfile  README.md  cloudbuild.yaml  requirements.txt
eidos/: EIDOS_BRAIN_UNIFIED_v0_4.7.02.py  eidos_brain_v_0_4_7.md  eidos_domain_adapters.py  eidos_forecast.py  eidos_incident_cards.py  eidos_procedural_memory.py  forensic_results.txt  forensic_test_suite.py  incident_test_data.csv  pytest.ini  test_report.txt  verify_forecast_mode.py  verify_test_1.py  verify_test_2.py
eidos/AUDIT/: AUDIT_REPORT.md  CLOUD_INFRA_AUDIT.md  CONTINUITY_SPEC.md  CORE_LOOP_SPEC.md  (+15 more)
eidos/repo/: CHANGELOG.md  CODEX_AUDIT_REPORT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
eidos/repo/configs/: default.yaml  demo_local.yaml  demo_stream.yaml
eidos/repo/demo_data/: sample.ndjson
eidos/repo/demo_data/sample_folder/: sample.csv
eidos/repo/docker/: Dockerfile  docker-compose.yml
eidos/repo/scripts/: deploy_cloud_run.sh  publish_pypi.sh  run_daemon.sh  run_local_demo.sh  run_stream_demo.sh  test_connectivity.py
eidos/repo/src/eidos_brain/demo/: dashboard.py  demo_runner.py  demo_streamer.py
eidos/repo/src/eidos_brain/engine/: adapters.py  eidos_v0_4_7_02.py
eidos/repo/src/eidos_brain/io/: hive_event.py  sources.py
eidos/repo/src/eidos_brain/service/: api.py  daemon.py  metrics.py
eidos/repo/src/eidos_brain/utils/: config.py  provenance.py
eidos/repo/tests/: conftest.py  test_multi_session_isolation.py  test_optional_deps.py  test_preflight.py  test_provenance_manifest.py  test_replay_golden_session.py  test_smoke_synthetic.py  test_streaming.py
(+23 files in other folders)
